# twoway-sign-translator

./: .gitignore  1.py  Train.py  app.py  combine.py  main.py  mic.py  packages.txt  pyproject.toml  render.yaml  requirements.txt  setup_images.py  st.py  users.json
.streamlit/: config.toml
CNN.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
CNN.model/variables/: variables.data-00000-of-00001  variables.index
