[tool.poetry]
name = "sign-language-translator"
version = "1.0.0"
description = "Two-way sign language and speech translator"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.28.0"
tensorflow = "2.12.0"
opencv-python-headless = ">=4.8.0"
numpy = ">=1.24.0"
gTTS = ">=2.3.0"
SpeechRecognition = ">=3.10.0"
Pillow = ">=9.0.0"
pydub = ">=0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
